# 6837-Project

./: CMakeLists.txt  IcoSphere.py  README.md
src/: CMakeLists.txt  Image.h  Mesh.cpp  Mesh.h  camera.cpp  camera.h  main.cpp
